examples/type_system/failing/123_array_missing_close_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let xs = [|1, 2|
let after = 3
